Removes the extra margin bottom on the UHP section of the index page. [Fixes #100]

--- a/css/help-center.css
+++ b/css/help-center.css
@@ -276,6 +276,8 @@ html {
   width: 16.4rem;
   height: 8.2rem;
   line-height: 16.4rem;
+  -moz-border-radius: 16.4rem 16.4rem 0 0;
+  -webkit-border-radius: 16.4rem 16.4rem 0 0;
   border-radius: 16.4rem 16.4rem 0 0;
   color: #ffffff;
   background-color: #205493;
@@ -293,6 +295,8 @@ html {
   width: 16.4rem;
   height: 8.2rem;
   line-height: 16.4rem;
+  -moz-border-radius: 16.4rem 16.4rem 0 0;
+  -webkit-border-radius: 16.4rem 16.4rem 0 0;
   border-radius: 16.4rem 16.4rem 0 0;
   color: #ffffff;
   background-color: #112e51;
@@ -314,6 +318,8 @@ html {
   width: 16.4rem;
   height: 8.2rem;
   line-height: 16.4rem;
+  -moz-border-radius: 16.4rem 16.4rem 0 0;
+  -webkit-border-radius: 16.4rem 16.4rem 0 0;
   border-radius: 16.4rem 16.4rem 0 0;
   color: #212121;
   background-color: #fdb81e;
@@ -330,6 +336,8 @@ html {
   width: 16.4rem;
   height: 8.2rem;
   line-height: 16.4rem;
+  -moz-border-radius: 16.4rem 16.4rem 0 0;
+  -webkit-border-radius: 16.4rem 16.4rem 0 0;
   border-radius: 16.4rem 16.4rem 0 0;
   color: #ffffff;
   background-color: #2e8540;
@@ -341,6 +349,8 @@ html {
   width: 16.4rem;
   height: 8.2rem;
   line-height: 16.4rem;
+  -moz-border-radius: 16.4rem 16.4rem 0 0;
+  -webkit-border-radius: 16.4rem 16.4rem 0 0;
   border-radius: 16.4rem 16.4rem 0 0;
   color: #ffffff;
   background-color: #2e8540;
@@ -358,6 +368,8 @@ html {
   width: 16.4rem;
   height: 8.2rem;
   line-height: 16.4rem;
+  -moz-border-radius: 16.4rem 16.4rem 0 0;
+  -webkit-border-radius: 16.4rem 16.4rem 0 0;
   border-radius: 16.4rem 16.4rem 0 0;
   color: #ffffff;
   background-color: #e31c3d;
@@ -793,12 +805,6 @@ html {
   display: block;
 }
 
-@media screen and (min-width: 48em) {
-  .usajobs-unique-hiring-paths__outer-body {
-    margin-bottom: 6rem;
-  }
-}
-
 .usajobs-unique-hiring-paths__title {
   text-align: center;
 }
@@ -996,6 +1002,7 @@ html {
 }
 
 .no-flexbox .usajobs-unique-hiring-paths__body {
+  width: -webkit-calc(100% -  11.3rem);
   width: calc(100% -  11.3rem);
 }
 
@@ -1011,6 +1018,8 @@ html {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
   box-align: center;
   -webkit-align-items: center;
   -moz-align-items: center;
@@ -1022,11 +1031,14 @@ html {
 
 .flexbox .usajobs-unique-hiring-paths__figure {
   -webkit-flex-shrink: 0;
-          flex-shrink: 0;
+  -moz-flex-shrink: 0;
+  flex-shrink: 0;
   -ms-flex-negative: 0;
 }
 
 .flexbox .usajobs-unique-hiring-paths__body {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
   box-flex: 1;
   -webkit-flex: 1;
   -moz-flex: 1;
@@ -1194,6 +1206,7 @@ html {
 }
 
 .no-flexbox .usajobs-uhp-section-nav__body {
+  width: -webkit-calc(100% -  6.9rem);
   width: calc(100% -  6.9rem);
 }
 
@@ -1209,6 +1222,8 @@ html {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
   box-align: center;
   -webkit-align-items: center;
   -moz-align-items: center;
@@ -1220,11 +1235,14 @@ html {
 
 .flexbox .usajobs-uhp-section-nav__figure {
   -webkit-flex-shrink: 0;
-          flex-shrink: 0;
+  -moz-flex-shrink: 0;
+  flex-shrink: 0;
   -ms-flex-negative: 0;
 }
 
 .flexbox .usajobs-uhp-section-nav__body {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
   box-flex: 1;
   -webkit-flex: 1;
   -moz-flex: 1;
@@ -2046,6 +2064,8 @@ html {
 }
 
 .usajobs-help-center-home__section-container {
+  -webkit-box-align: stretch;
+  -moz-box-align: stretch;
   box-align: stretch;
   -webkit-align-items: stretch;
   -moz-align-items: stretch;
@@ -2060,6 +2080,8 @@ html {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -moz-box-pack: start;
   box-pack: start;
   -webkit-justify-content: flex-start;
   -moz-justify-content: flex-start;
@@ -2067,7 +2089,11 @@ html {
   -o-justify-content: flex-start;
   justify-content: flex-start;
   -ms-flex-pack: start;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
   box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
   box-direction: normal;
   -webkit-flex-direction: row;
   -moz-flex-direction: row;
@@ -2077,12 +2103,15 @@ html {
   -moz-box-lines: multiple;
   box-lines: multiple;
   -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
 .usajobs-help-center-home__section {
   position: relative;
+  -webkit-box-flex: 0;
+  -moz-box-flex: 0;
   box-flex: 0;
   -webkit-flex: 0 0 auto;
   -moz-flex: 0 0 auto;
@@ -2614,4 +2643,5 @@ html {
   padding: 1rem 1.5rem;
   color: #5b616b;
 }
+
 /*# sourceMappingURL=help-center.css.map */
